# fcitx5-android

./: .gitignore  .gitmodules  AGENTS.md  Jenkinsfile  README.md  build.gradle  build.gradle.kts  flake.nix  gradle.properties  gradlew  gradlew.bat  renovate.json  settings.gradle  settings.gradle.kts  shell.nix  transifex-config.ini  transifex.yml
.github/: pull-request-template.md
.github/ISSUE_TEMPLATE/: bug-report.md  bug_report.yaml  config.yml  feature-request.md  feature_request.yaml
.github/workflows/: build.yml  fdroid.yml  nix.yml  publish.yml  pull_request.yml
app/: build.gradle  build.gradle.kts  licenses.yml  org.fcitx.fcitx5.android.yml  proguard-rules.pro
app/licenses/libraries/: boost.json  fcitx5-chinese-addons.json  fcitx5-lua.json  fcitx5-unikey.json  fcitx5.json  fmt.json  libevent.json  libime.json  libintl-lite.json  libuv.json  lua.json  opencc.json  zstd.json
app/schemas/me.rocka.fcitx5test.data.clipboard.db.ClipboardDatabase/: 1.json
app/schemas/org.fcitx.fcitx5.android.data.clipboard.db.ClipboardDatabase/: 2.json  3.json  4.json
app/src/main/: AndroidManifest.xml
app/src/main/assets/: README.md  sampleconfig.json
app/src/main/cpp/: CMakeLists.txt  androidstreambuf.h  helper-types.h  jni-utils.h  key-utils.cpp  native-lib.cpp  nativestreambuf.h  object-conversion.h  pinyindictionaryutils.cpp  tabledictionaryutils.cpp  utf8utils.cpp
app/src/main/cpp/androidaddonloader/: androidaddonloader.cpp  androidaddonloader.h
app/src/main/cpp/androidfrontend/: CMakeLists.txt  androidfrontend.conf.in  androidfrontend.conf.in.in  androidfrontend.cpp  androidfrontend.h  androidfrontend_public.h  inputcontextcache.h
app/src/main/cpp/androidkeyboard/: CMakeLists.txt  androidkeyboard.conf.in.in  androidkeyboard.cpp  androidkeyboard.h
app/src/main/cpp/androidnotification/: CMakeLists.txt  androidnotification.cpp  androidnotification.h  notifications.conf.in.in
app/src/main/cpp/androidpunctuation/: CMakeLists.txt  punc.mb.zh_CN
app/src/main/cpp/cmake/: FindFcitx5Core.cmake  FindFcitx5Module.cmake  FindFcitx5ModuleLuaAddonLoader.cmake  FindFcitx5Utils.cmake  FindGettext.cmake  FindLibIMEPinyin.cmake  FindLibIMETable.cmake  FindLua.cmake  FindPkgConfig.cmake
app/src/main/cpp/cmake/dummy/Fcitx5Utils/: Fcitx5CompilerSettings.cmake  Fcitx5CompilerSettings.cmake.dummy
app/src/main/cpp/po/: CMakeLists.txt  LINGUAS  RU_ru  de.po  es.po  fcitx5-android-poc.pot  fcitx5-android.pot  ja.po  ko.po  ru.po  zh-rCN.po  zh-rTW.po  zh_CN.po  zh_TW.po
app/src/main/play/: contact-email.txt  contact-website.txt
app/src/main/res/: resources.properties
build-logic/: settings.gradle.kts
build-logic/convention/: build.gradle.kts
build-logic/gradle/wrapper/: gradle-wrapper.properties
codegen/: build.gradle.kts
fastlane/metadata/android/en-US/: full_description.txt  short_description.txt
fastlane/metadata/android/ru/: full_description.txt  short_description.txt
fastlane/metadata/android/zh-CN/: full_description.txt  short_description.txt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
lib/common/: build.gradle.kts  proguard-rules.pro
lib/common/src/main/: AndroidManifest.xml
lib/fcitx5/: build.gradle.kts
lib/fcitx5-chinese-addons/: build.gradle.kts
lib/fcitx5-chinese-addons/src/main/cpp/: CMakeLists.txt
lib/fcitx5-chinese-addons/src/main/cpp/cmake/: FindFcitx5ModulePunctuation.cmake
lib/fcitx5-lua/: build.gradle.kts
lib/fcitx5-lua/src/main/cpp/: CMakeLists.txt
lib/fcitx5-lua/src/main/cpp/cmake/: FindFcitx5ModuleLuaAddonLoader.cmake
lib/fcitx5/src/main/cpp/: CMakeLists.txt
lib/fcitx5/src/main/cpp/cmake/: Fcitx5AndroidInstallDirs.cmake  Fcitx5UtilsConfig.cmake  Fcitx5UtilsConfigVersion.cmake  FindECM.cmake  FindFcitx5Config.cmake  FindFcitx5Core.cmake  FindFcitx5Module.cmake  FindFcitx5ModuleLuaAddonLoader.cmake  FindFcitx5Utils.cmake  FindPkgConfig.cmake  FindZLIB.cmake  HookAddCustomCommand.cmake
lib/fcitx5/src/main/cpp/cmake/Fcitx5Utils/: Fcitx5CompilerSettings.cmake  Fcitx5Download.cmake.in  Fcitx5Macros.cmake  Fcitx5ModuleTemplate.cmake.in
lib/libime/: build.gradle.kts
lib/libime/src/main/cpp/: CMakeLists.txt
lib/libime/src/main/cpp/cmake/: FindLibIMECore.cmake  FindLibIMEPinyin.cmake  FindLibIMETable.cmake
lib/plugin-base/: build.gradle.kts  proguard-rules.pro
lib/plugin-base/src/debug/: AndroidManifest.xml
lib/plugin-base/src/main/: AndroidManifest.xml
nix/: default.nix  sdk.nix
plugin/: pluginSchema.xsd
plugin/anthy/: build.gradle.kts
plugin/anthy/licenses/libraries/: anthy-unicode.json  fcitx5-anthy.json
plugin/anthy/src/main/: AndroidManifest.xml
plugin/anthy/src/main/cpp/: CMakeLists.txt  anthy-unicode.conf
plugin/chewing/: build.gradle.kts
plugin/chewing/licenses/libraries/: fcitx5-chewing.json  libchewing.json
plugin/chewing/src/main/cpp/: CMakeLists.txt
plugin/clipboard-filter/: build.gradle.kts
plugin/clipboard-filter/licenses/libraries/: rules.json
plugin/clipboard-filter/src/main/: AndroidManifest.xml
plugin/hangul/: build.gradle.kts
plugin/hangul/licenses/libraries/: fcitx5-hangul.json  libhangul.json
plugin/hangul/src/main/cpp/: CMakeLists.txt
plugin/jyutping/: build.gradle.kts
plugin/jyutping/licenses/libraries/: libime-jyutping.json
plugin/jyutping/src/main/: AndroidManifest.xml
plugin/jyutping/src/main/cpp/: CMakeLists.txt
plugin/m17n/: build.gradle.kts
plugin/m17n/licenses/libraries/: fcitx5-m17n.json  glibc.json  m17n-db.json  m17n-lib.json
plugin/m17n/src/main/: AndroidManifest.xml
plugin/m17n/src/main/cpp/: CMakeLists.txt
plugin/mozc/: build.gradle.kts
plugin/mozc/src/main/cpp/: CMakeLists.txt
plugin/rime/: build.gradle.kts
plugin/rime/licenses/libraries/: boost.json  (+15 more)
plugin/rime/src/main/cpp/: CMakeLists.txt  default.yaml
plugin/sayura/: build.gradle.kts
plugin/sayura/src/main/cpp/: CMakeLists.txt
plugin/sms-otp/: build.gradle.kts
plugin/thai/: build.gradle.kts  proguard-rules.pro
plugin/thai/src/main/cpp/: CMakeLists.txt
plugin/unikey/: build.gradle.kts
plugin/unikey/src/main/cpp/: CMakeLists.txt
(+1127 files in other folders)
